# all-in-mcp

./: .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  test_crossref.py
.github/: copilot-instructions.md.back
.github/workflows/: release.yml
docs/: INTEGRATION.md  PROJECT_SUMMARY.md  README.md  api.md  configuration.md  examples.md  git-hooks.md  installation.md  pypi-setup.md  tests.md
examples/: mcp_demo.py  test_iacr_search.py
scripts/: create-release.sh  release.py
src/all_in_mcp/: __init__.py  paper.py  server.py
src/all_in_mcp/academic_platforms/: base.py  cryptobib.py  iacr.py
src/apaper/: __main__.py  server.py
src/daily_utilities_mcp/: server.py
src/qwen_search/: __init__.py  client.py  server.py
tests/: README.md  test_apaper_iacr.py  test_apaper_pdf.py  test_crossref.py  test_cryptobib.py  test_fastmcp_server.py  test_google_scholar.py  test_iacr.py  test_mcp_server.py  test_pdf_reading.py  test_qwen_search.py  test_server.py
