[project]
name = "all-in-mcp"
version = "0.1.0"
description = "MCP server providing all functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
system = ["psutil>=5.9.0"]
all = ["psutil>=5.9.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.21.0"]
[[project.authors]]
name = "isomo"
email = "jiahaoxiang2000@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
all-in-mcp = "all_in_mcp:main"
